<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:textSize="23sp"/>

            <TextView
                android:id="@+id/textViewTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel" />

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adresse" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_exp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewExp"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience"/>

    <TextView
        android:id="@+id/textViewDiplome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/title_form"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewFormation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        tools:listitem="@layout/item_formation">
    </ListView>

    <Button
        android:id="@+id/buttonCompentences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_comp"
        android:textAllCaps="false" />


</LinearLayout>